# calculate-my-score

./: README.md  pyproject.toml
.github/workflows/: test.yaml
calculate_my_score/: main.py
tests/: test_calculate_my_score.py
